Edited wiki page Hydra_V4 through web user interface.

--- a/wiki/Hydra_V4.wiki
+++ b/wiki/Hydra_V4.wiki
@@ -164,3 +164,8 @@ For the splitter variant, the upper left corner will indicate the number of amps
 For the standalone variant, the upper left corner shows the time of day. Since the clock hasn't yet been set, it will be blank. To set the clock, check out the [https://code.google.com/p/open-evse/wiki/Hydra_EVSE#User's_guide User's Guide] to learn how the menu system works. The menu system will also allow you to set the configured maximum current. *WARNING* You must never exceed 80% of the current rating of the circuit supplying power to your Hydra! The NEC and UL require a 20% circuit de-rating for EVSEs since they are a constant maximum current draw when operating. If you wish to charge at 40A, you must use a circuit and breaker rated for at least 50A.
 
 Connect each J1772 car cable in turn to a vehicle and charge for 15 minutes. *Do not leave your Hydra unattended during this test!* As the car is charging, periodically feel the chassis and examine the wiring for any signs of heating. After the 15 minutes, disconnect power and quickly open the chassis and feel the wiring and contactors for elevated temperature. The wires will likely be warm, but if they are too hot to touch, then something is wrong and _must_ be corrected. This test should be repeated periodically during the service lifetime of the Hydra. Also, if during operation you see any signs of fog or smoke inside the chassis, or if any of the wiring changes color, that is a sign that unsafe temperature increases are taking place, and *must* be investigated and corrected. *DO NOT* reuse heat-damaged components!
+
+=Links=
+  * [http://www.kfu.com/~nsayer/hydra/Hydra-EVSE-4_1.pdf EVSE logic/display board schematic]
+  * [http://www.kfu.com/~nsayer/hydra/Hydra-split-4_1.pdf Splitter logic/display board schematic]
+  * [http://www.kfu.com/~nsyaer/hydra/Hydra-AC-4_2.pdf HV board schematic]
