Edited wiki page OpenEVSE_II through web user interface.

--- a/wiki/OpenEVSE_II.wiki
+++ b/wiki/OpenEVSE_II.wiki
@@ -139,7 +139,7 @@ Attach one end of the mezzanine cable to the HV board, taking careful note of th
 
 Set the chassis aside for now.
 
-Prepare the lid by attaching the waterproofing gasket (if you bought one) and the LCD waterproofing kit (again, if you bought it). Solder the 3 wire cable onto the select switch as instructed and install the button in the hole in the lid. Install the OpenEVSE II logic/display board onto the 4 mounting posts in the lid. Connect the button cable up to the SELECT 3 pin terminal on the board. Connect the GFI CT coil up to the GFI terminals, noting the orientation - the GFI test pin is the left, the GFI pin is in the center, and ground is on the right. Connect the ammeter coil up to its terminal block - orientation does not matter. Connect the J1772 pilot wire up to the left terminal of the pilot block (top screw). Connect the mezzanine cable up to the mezzanine connector in the upper left corner, carefully noting the position of pin 1.
+Prepare the lid by attaching the waterproofing gasket (if you bought one) and the LCD waterproofing kit (again, if you bought it). Solder the 3 wire cable onto the select switch as instructed and install the button in the hole in the lid. Install the OpenEVSE II logic/display board onto the 4 mounting posts in the lid. Connect the button cable up to the SELECT 3 pin terminal on the board. Connect the GFI CT coil up to the GFI terminals, noting the orientation - the GFI test pin is the left, the GFI pin is in the center, and ground is on the right. Connect the ammeter coil up to its terminal block - orientation does not matter. Connect the J1772 pilot wire up to the left terminal of the pilot block. The top screw is the pilot, the bottom screw is ground (normally unused). Connect the mezzanine cable up to the mezzanine connector in the upper left corner, carefully noting the position of pin 1.
 
 Install a CR1220 battery in the battery clip.
 
