--- a/wiki/OpenEVSE_II.wiki
+++ b/wiki/OpenEVSE_II.wiki
@@ -131,7 +131,7 @@ Prepare the AC cable by stripping 6 inches of its outer jacket and installing a 
 
 Prepare the J1772 cable by stripping 6 inches off the outer jacket. Locate and identify each wire - the two hots, the ground and the pilot. If your cable includes a proximity wire, trim it short to keep it out of the way. Install the cable into its cable gland and install the gland in its chassis hole. Estimate how long the two hots and ground must be to reach their destination. Be sure to leave room for the GFI over both hit lines and the ammeter coil over one of them. Cut the hot and ground wires to length. Screw the ground wire into the ground bus. Pass both hot lines through the GFI CT coil and one of the hot lines (it doesn't matter which) through the ammeter coil. Attach the two hot wires to the LOAD terminals on the contactor. The pilot line will be attached to the logic/display board later.
 
-Prepare three pairs of 22 gauge wires by twisting them together and attaching 22 gauge QD crimp terminals to each on one end. Attach one pair each to the auxiliary QD terminals on the contactor on the line side, load side and the contactor coil. Connect each pair to the screw terminals on the HV board, as appropriate, to the AC in (contactor line side) block, the relay test (contactor load side) block, and the contactor (contactor coil) block. When connecting the AC Line terminals, if you are not in North America, then take careful note of the "H" and "N" markings on the AC line terminal. Connect the hot side of the contactor to the "H" terminal and the neutral side to the "N" terminal. If you get this backwards, the ground impedance test will fail.
+Prepare three pairs of 22 gauge wires by twisting them together and attaching 22 gauge QD crimp terminals to each on one end. Attach one pair each to the auxiliary QD terminals on the contactor on the line side, load side and the contactor coil. Connect each pair to the screw terminals on the HV board, as appropriate, to the AC in (contactor line side) block, the relay test (contactor load side) block, and the contactor (contactor coil) block. When connecting the AC Line terminals, if you are not in North America, then take careful note of the "H" and "N" markings on the AC line and relay test terminals. Connect the hot side of the contactor to the "H" terminals and the neutral side to the "N" terminals. If you get this backwards, the ground impedance test will fail.
 
 === Continue ===
 
