--- a/wiki/OpenEVSE_DIY_LCD_spec.wiki
+++ b/wiki/OpenEVSE_DIY_LCD_spec.wiki
@@ -22,9 +22,9 @@ http://open-evse.googlecode.com/files/RGB_i2c_v1plusRTC_TH.zip
 == BOM ==
 || *Part* || *Value* ||	*Type* || *Quantity* ||	*Manufacture* ||	*Part Number* ||
 ||Board||	||	Board||	1||	<b><font color=teal> Open</font></b>*EVSE*||	Board||
-|| R1 || 220 ||	Resistor || 1 || Panasonic || CF14JT2K40CT-ND ||	
-|| R2, R3 || 330 || Resistor || 2 || Panasonic || CF14JT2K40CT-ND ||	
-|| R4, R5 || 4.7k || Resistor || 2 || Panasonic || CF14JT2K40CT-ND ||	
+|| R1 || 75 ||	Resistor || 1 || Stackpole || CF14JT75R0TR-ND ||	
+|| R2, R3 || 51 || Resistor || 2 || Stackpole || CF14JT51R0TR-ND ||	
+|| R4, R5 || 4.7k || Resistor || 2 || Stackpole || CF14JT4K70CT-ND ||	
 || IC1 || MCP23017 || IO expander || 1 || MPC || MPC23017-E/SP-ND ||
 || C1 || .1uf || Capacitor || 1 || Kemet || 399-9872-1-ND ||
 ||Contrast|| 10k || Trimpot || 1 || Panasonic || D4AA14-ND ||
