--- a/wiki/OpenEVSE_II.wiki
+++ b/wiki/OpenEVSE_II.wiki
@@ -105,9 +105,7 @@ Place the mounting plate in the chassis and screw down each corner using the sup
 
 === Relay HV board steps ===
 
-Note that on the board, one of the relays is marked "HOT" and the other "NEUT." When wiring the AC line side, you should insure that you connect the hot and neutral lines to the correct relay. If you get this wrong, then the ground impedance test will fail. This only matters if you're using hot-neutral-ground (as opposed to hot-hot-ground) wiring, which means using it at L1 in North America or anywhere outside North America.
-
-Prepare the AC cable by stripping 6 inches of its outer jacket and installing a cable gland. Trim the individual wires to the correct length and crimp a .25" QD terminal on each hot line. Connect the ground wire of the AC cable to the ground bus. Connect the hot line to the LINE terminal of the HOT relay. Connect the neutral line to the LINE terminal of the NEUT relay. If you're only going to support North American L2 systems, then it doesn't matter which line connects to which relay.
+Prepare the AC cable by stripping 6 inches of its outer jacket and installing a cable gland. Trim the individual wires to the correct length and crimp a .25" QD terminal on each hot line. Connect the ground wire of the AC cable to the ground bus. Connect the hot line to the LINE terminal of one of the relays. Connect the neutral line to the LINE terminal of the other relay.
 
 Prepare the J1772 cable by stripping 6 inches off the outer jacket. Locate and identify each wire - the two hots, the ground and the pilot. If your cable includes a proximity wire, trim it short to keep it out of the way. Install the cable into its cable gland and install the gland in its chassis hole. Estimate how long the two hots and ground must be to reach their destination. Be sure to leave room for the GFI over both hot lines and the ammeter coil over one of them. Cut the hot and ground wires to length. Install QD terminals on the hot wires. Screw the ground wire into the ground bus. Pass both hot lines through the GFI CT coil and one of the hot lines (it doesn't matter which) through the ammeter coil. Attach the QD terminals to the LOAD terminals on the relays. It doesn't matter which J1772 hot wire connects to which relay. Connect the ground wire to the ground bus. The pilot line will be attached to the logic/display board later.
 
@@ -123,7 +121,7 @@ Attach the relay wires to the relay terminal on the HV board.
 
 Prepare the AC cable by stripping 6 inches of its outer jacket and installing a cable gland. Trim the individual wires to the correct length and connect the ground wire to the ground bus and the other two wires to each of the two line side terminals on the fuse block. Take two lengths of wire trimmed from the AC cable sized to reach from the load side of the fuse terminal to the line side of the relay(s). Trim 3/8" of insulation off each end of each wire. Crimp a QD terminal on one end of each wire. Install the QD terminals on the line sides of the relay(s). Screw the other end of the large wires into the load side of the fuse blocks, matching the colors with the AC input wires.
 
-Strip 6 inches of jacket off of the end of your J1772 cable and identify each of the wires inside - the ground, two hot lines, and pilot. If your cable includes a proximity line, trim it short to keep it out of the way. Install a cable gland and install the gland in the chassis. Run each hot line through the GFI coil and one of them through the ammeter coil. Then trim 5/8" off of each hot line. Cut two red and black 6 inch 22 gauge wires and trim 3/8" of insulation off one end and 1/8" off the other end of each. Take one of the 22 gauge wires and one of the large J1772 cable hot wires (matching the colors) and insert them both into a .25" QD female crimp terminal and securely crimp the terminal into place. Connect the QD terminals to the load side of the relay(s), and connect the free end of the two 22 gauge wires to the "relay test" terminals on the HV board. When doing so, make sure to match the hot line to the H terminal and the neutral line to the N terminal (if you're in North America and only intend to use 208/240 VAC, then it doesn't matter which is which). If you get this backwards, then the ground impedance test will fail.
+Strip 6 inches of jacket off of the end of your J1772 cable and identify each of the wires inside - the ground, two hot lines, and pilot. If your cable includes a proximity line, trim it short to keep it out of the way. Install a cable gland and install the gland in the chassis. Run each hot line through the GFI coil and one of them through the ammeter coil. Then trim 5/8" off of each hot line. Cut two red and black 6 inch 22 gauge wires and trim 3/8" of insulation off one end and 1/8" off the other end of each. Take one of the 22 gauge wires and one of the large J1772 cable hot wires (matching the colors) and insert them both into a .25" QD female crimp terminal and securely crimp the terminal into place. Connect the QD terminals to the load side of the relay(s), and connect the free end of the two 22 gauge wires to the "relay test" terminals on the HV board.
 
 === Contactor HV board steps ===
 
@@ -131,7 +129,7 @@ Prepare the AC cable by stripping 6 inches of its outer jacket and installing a 
 
 Prepare the J1772 cable by stripping 6 inches off the outer jacket. Locate and identify each wire - the two hots, the ground and the pilot. If your cable includes a proximity wire, trim it short to keep it out of the way. Install the cable into its cable gland and install the gland in its chassis hole. Estimate how long the two hots and ground must be to reach their destination. Be sure to leave room for the GFI over both hit lines and the ammeter coil over one of them. Cut the hot and ground wires to length. Screw the ground wire into the ground bus. Pass both hot lines through the GFI CT coil and one of the hot lines (it doesn't matter which) through the ammeter coil. Attach the two hot wires to the LOAD terminals on the contactor. The pilot line will be attached to the logic/display board later.
 
-Prepare three pairs of 22 gauge wires by twisting them together and attaching 22 gauge QD crimp terminals to each on one end. Attach one pair each to the auxiliary QD terminals on the contactor on the line side, load side and the contactor coil. Connect each pair to the screw terminals on the HV board, as appropriate, to the AC in (contactor line side) block, the relay test (contactor load side) block, and the contactor (contactor coil) block. When connecting the AC Line terminals, if you are not in North America, then take careful note of the "H" and "N" markings on the AC line and relay test terminals. Connect the hot side of the contactor to the "H" terminals and the neutral side to the "N" terminals. If you get this backwards, the ground impedance test will fail.
+Prepare three pairs of 22 gauge wires by twisting them together and attaching 22 gauge QD crimp terminals to each on one end. Attach one pair each to the auxiliary QD terminals on the contactor on the line side, load side and the contactor coil. Connect each pair to the screw terminals on the HV board, as appropriate, to the AC in (contactor line side) block, the relay test (contactor load side) block, and the contactor (contactor coil) block.
 
 === Continue ===
 
@@ -155,9 +153,9 @@ Feel free to follow along with the schematics (below). Each subsection here corr
 
 There are two DC/DC converters built around the venerable MC34063 chip, The one on the left is a buck topology to reduce the 12 volts input to 5 volts at up to 250 mA. The one on the right is an inverting topology to turn +12 volts into -12 volts at up to 50 mA. Since the only use for the -12 volts is the pilot generator, there's a 2.4 k-ohm resistor across it to provide a minimal load. This improves the efficiency and stability of the converter.
 
-The GFI is in three basic pieces. The first op-amp stage is a rectifying amplifier with a gain of 100 and a low-pass filter with a roll-off of 120 Hz (or so). It gets its input from the GFI current transformer. A current transformer outputs a current proportional to the current flowing on the conductor(s) passing through it. For a GFI, the two power supply conductors pass through it, and in a correct environment, all of the current flowing out through one of them should be balanced by the same amount of current flowing back through the other, for a net result of 0. If the current can find some other path to ground, the resulting imbalance will result in a current output from the CT. Immediately across the CT is a burden resistor. The burden resistor's job is to convert the current into a voltage that can be measured. There is a zener diode clamp to protect the amplifier from excessive voltage swings in the case of massive imbalances. The output of the amplifier goes into a peak-hold capacitor and is then fed into a comparator. Whenever the held-peak exceeds the comparison voltage (calibrated for somewhat less than 20 mA, but not so much less to be a nuisance), it interrupts the controller.
+The GFI is in three basic pieces. The first op-amp stage is a rectifying amplifier with a gain of 100 and a low-pass filter with a roll-off of 120 Hz (or so). It gets its input from the GFI current transformer. A current transformer outputs a current proportional to the current flowing on the conductor(s) passing through it. For a GFI, the two power supply conductors pass through it, and in a correct environment, all of the current flowing out through one of them should be balanced by the same amount of current flowing back through the other, for a net result of 0. If the current can find some other path to ground, the resulting imbalance will result in a current output from the CT. Immediately across the CT is a burden resistor. The burden resistor's job is to convert the current into a voltage that can be measured. There is a zener diode clamp to protect the amplifier from excessive voltage swings in the case of massive imbalances. The output of the amplifier is fed into a comparator. Whenever the amplifier output exceeds the comparison voltage (calibrated for between 15 mA and 20 mA), it interrupts the controller.
 
-In addition, there's a GFI test circuit. This is merely a current limiting resistor. It's intended to be connected to a wire that takes 3 or 4 loops around and through the GFI coil and then connects to ground. The controller can test the GFI by pulsing this line with a 60 Hz square wave The multiple loops will serve to amplify the impact of the current flowing through the wire (each loop through represents another wire with the same current flowing through it), assuring that the GFI will trigger.
+In addition, there's a GFI test circuit. This is merely a current limiting resistor. It's intended to be connected to a wire that takes 2 or 3 loops around and through the GFI coil and then connects to ground. The controller can test the GFI by pulsing this line with a 60 Hz square wave The multiple loops will serve to amplify the impact of the current flowing through the wire (each loop through represents another wire with the same current flowing through it), assuring that the GFI will trigger.
 
 === Car signalling ===
 
@@ -173,7 +171,7 @@ On the output there is a 1k impedance setting resistor mandated by the spec. Aft
 
 The micro controller is the ATMega328p with a 16 MHz crystal. A crystal is called for in particular because the 1 kHz pilot has a frequency tolerance specification that requires that level of accuracy. 16 MHz is an otherwise arbitrary choice, but it is compatible with the Arduino Uno, from which the legacy of OpenEVSE is derived.
 
-The i2c bus of the controller goes to an MC23017 i2c-to-GPIO expander chip, which is in turn connected to the RGB LCD and to the select button. This portion is exactly the same as both the AdaFruit i2c RGB LCD Arduino shield and the OpenEVSE display backpack. The i2c bus also goes to a DS1307 RTC chip, also equipped with its own crystal and backup battery.
+The i2c bus of the controller goes to an MC23017 i2c-to-GPIO expander chip, which is in turn connected to the RGB LCD and to the select button. This portion is exactly the same as both the AdaFruit i2c RGB LCD Arduino shield and the OpenEVSE display backpack. The i2c bus also goes to a DS1307 RTC chip, also equipped with its own crystal and backup battery, and an MCP9808 temperature sensor.
 
 === HV board(s) ===
 
@@ -186,20 +184,18 @@ Each HV board has five jobs:
 
 Each HV board comes with either a 10W isolated power supply or a 3W one. The contactor version uses 3 watts because the contactor control circuit requires much less low-voltage power than the relay versions do.
 
-The relay boards simply use an MMBT4401 power transistor to switch the relay(s) on and off. A flyback diode protects the transistor from coil collapse voltages. The contactor version uses an opto-isolated driver triac to switch a small triac on and off to control an external line powered contactor. Both the driver and power triacs are provisioned with snubbers to similarly protect them from coil collapse voltages when the contactor is switched off.
+The relay boards use an MMBT4401 power transistor to switch the relay(s) on and off. A flyback diode protects the transistor from coil collapse voltages. The contactor version uses an opto-isolated driver triac to switch a small triac on and off to control an external line powered contactor. Both the driver and power triacs are provisioned with snubbers to similarly protect them from coil collapse voltages when the contactor is switched off.
 
-The voltmeter is simply one out of four opto-isolators in an LTV-844S connected across the AC line input with a 150 k-ohm series resistor. The series resistor is intended to reduce the current down to the 1-2 mA range, which results in a 0.5-1 mA transfer current (or so) from the transistor on the secondary. This winds up providing an output voltage with peaks at up to around 3 volts or so for 240 Vrms. The secondary is fed into a buffering OP amp and then passed to the logic board.
+The voltmeter is one out of two opto-isolators in an LTV-844S connected across the AC line input with a 150 k-ohm series resistor. The series resistor is intended to reduce the current down to the 1-2 mA range, which results in a 0.5-1 mA transfer current (or so) from the transistor on the secondary. This winds up providing an output voltage with peaks at up to around 3 volts or so for 240 Vrms. The secondary is fed into a buffering OP amp and then passed to the logic board.
 
-The ground impedance test has a similar series resistor from one of the two AC power input lines (for hot-neutral power - such as North American 120 volts or 220 volt power outside North America, then you must carefully connect the hot line up to the hot terminal or else the ground test will fail) through a rectifying diode through a 1 mA current limit circuit, another opto-isolator and then to ground. The secondary side of the opto-isolator is fed into an OP amp comparator circuit. The output of that is fed into a simple peak-hold circuit made of a blocking diode, a large cap and a bleed resistor. If the ground impedance is too high, then the secondary current won't be high enough and the comparator won't provide any pulses to the peak-hold cap. The 1 mA current limit makes the test more sensitive, while also limiting the amount of leakage current and limiting the potential shock hazard in a situation where the ground is completely open.
-
-The stuck relay test is a cross between the voltmeter and the ground impedance test. Its primary side is the same as the voltmeter, but instead of being connected to the AC line side, it's connected to the load side of the relay or contactor. The secondary side is the same comparator / peak hold circuit as the ground impedance. The net result is that the controller should - after a short delay - see the relay test line always be the same state as the relay control line. This reflects the presence of AC voltage when the relay is closed and the absence of it when the relay is open.
+The ground impedance / stuck relay test starts with the relay test terminals. Each feeds into the anode of a beefy diode. The two diodes'  cathodes are connected together and then feed into a similar series resistor and then through a 1 mA current limit circuit, another opto-isolator and then to ground. The secondary side of the opto-isolator is fed into an OP amp comparator circuit. The output of that is fed into a simple peak-hold circuit made of a blocking diode, a large cap and a bleed resistor. The intention of the system is that when the relay or contactor is open, there should be no potential to ground on the load side. When the relay or contactor is closed, there must be a potential from at least one of the load terminals to ground.
 
 = Schematics =
 
-  * [http://www.kfu.com/~nsayer/hydra/OpenEVSE_II_Logic_0_5.pdf Logic/display board v0.5]
-  * [http://www.kfu.com/~nsayer/hydra/OpenEVSE_II_HV_Ext_Relay_0_5.pdf HV+External Relay board v0.5]
-  * [http://www.kfu.com/~nsayer/hydra/OpenEVSE_II_HV_Relay_0_5.pdf HV+Relay board v0.5]
-  * [http://www.kfu.com/~nsayer/hydra/OpenEVSE_II_HV_Contactor_0_5.pdf HV+Contactor board v0.5]
+  * [http://www.kfu.com/~nsayer/hydra/OpenEVSE_II_Logic_1_0.pdf Logic/display board v0.5]
+  * [http://www.kfu.com/~nsayer/hydra/OpenEVSE_II_HV_Ext_Relay_1_0.pdf HV+External Relay board v0.5]
+  * [http://www.kfu.com/~nsayer/hydra/OpenEVSE_II_HV_Relay_1_0.pdf HV+Relay board v0.5]
+  * [http://www.kfu.com/~nsayer/hydra/OpenEVSE_II_HV_Contactor_1_0.pdf HV+Contactor board v0.5]
 
 = Links =
 
