Edited wiki page MaxCurrent through web user interface.

--- a/wiki/MaxCurrent.wiki
+++ b/wiki/MaxCurrent.wiki
@@ -82,13 +82,6 @@ Saving Settings
 
 
 =Hardware=
+Serial
 
-Open EVSE supports serial communication via TTL serial and i2c, the board breaks out serial and power in the common "FTDI" format. FTDI devices are compatible with Open EVSE. An example of a Bluetooth and USB device are listed below, both have been successfuly tested with Open EVSE.
-
-http://www.sparkfun.com/products/10393
-
-http://dlnmh9ip6v2uc.cloudfront.net/images/products/10393-01b.jpg
-
-http://www.sparkfun.com/products/9718
-
-http://dlnmh9ip6v2uc.cloudfront.net/images/products/09717-01.jpg
+http://guides.openevse.com
